Enhance blog page, update styles, and  new cards components have been added.

--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -3,10 +3,15 @@
 ---
 
 <div
-  class="prose dark:prose-invert
-  prose-h1:font-bold prose-h1:text-xl
-  prose-a:text-blue-600 prose-p:text-justify prose-img:rounded-xl
-  prose-headings:underline"
+  class="prose-p:text-justify
+  prose-img:rounded-xl
+  prose-img:my-5
+  prose-p:mb-2.5
+  prose-p:font-manrope
+  prose-headings:font-poppins
+  prose-h2:text-xl
+  prose-h2:my-5
+  prose-h2:text-[min(5vw,20px)]"
 >
   <slot />
 </div>
