--- a/src/components/section/HeroSection.astro
+++ b/src/components/section/HeroSection.astro
@@ -24,7 +24,7 @@ import heroImg from "../../assets/Images/hero-img.jpg";
     >
     </div>
     <div
-      class="absolute bottom-1/4 left-1/4 w-96 h-96 bg-yellowLight rounded-full blur-3xl"
+      class="absolute bottom-1/4 left-1/2 w-96 h-96 bg-yellowLight rounded-full blur-3xl"
     >
     </div>
 
@@ -44,7 +44,7 @@ import heroImg from "../../assets/Images/hero-img.jpg";
               >infantil</span
             >
           </h1>
-          <h2 class="mt-6 text-slate-800">
+          <h2 class="mt-6 text-pretty text-slate-800">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
             ratione minima iure placeat esse enim velit a saepe odio obcaecati
             doloremque atque voluptatibus, mollitia similique exercitationem
@@ -58,7 +58,7 @@ import heroImg from "../../assets/Images/hero-img.jpg";
 
         <!-- Right column: Image/illustration -->
         <div class="relative flex justify-center lg:justify-end">
-          <!-- For a realistic device mockup effect -->
+          <!-- For a realistic mockup effect -->
           <div
             class="relative w-full max-w-md aspect-[3/4] bg-slate-800 rounded-xl p-2 shadow-2xl rotate-1 border border-slate-700"
           >
@@ -67,14 +67,6 @@ import heroImg from "../../assets/Images/hero-img.jpg";
               alt="Website screenshot"
               class="w-full h-full object-cover rounded-lg"
             />
-          </div>
-          <div
-            class="absolute -top-4 -right-4 w-16 h-16 bg-yellow-500 rounded-lg shadow-lg -rotate-6"
-          >
-          </div>
-          <div
-            class="absolute -bottom-8 -left-4 w-20 h-20 bg-blue-500 rounded-full shadow-lg"
-          >
           </div>
 
           <!-- Decorative floating elements -->
