--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -12,7 +12,9 @@ import logo from "../../assets/Images/logo-512x512.png";
         <a href="/">
           <Image src={logo} alt="logo" class="w-36 h-36" />
         </a>
-        <p class="text-center md:text-start">Centro de Estimulación Infantil</p>
+        <p class="font-manrope text-center md:text-start">
+          Centro de Estimulación Infantil
+        </p>
         <!-- Divider -->
         <span class="flex">
           <span class="h-px flex-1 bg-slate-200 md:hidden"></span>
@@ -57,7 +59,7 @@ import logo from "../../assets/Images/logo-512x512.png";
               d="M12 11.5A2.5 2.5 0 0 1 9.5 9A2.5 2.5 0 0 1 12 6.5A2.5 2.5 0 0 1 14.5 9a2.5 2.5 0 0 1-2.5 2.5M12 2a7 7 0 0 0-7 7c0 5.25 7 13 7 13s7-7.75 7-13a7 7 0 0 0-7-7"
             ></path></svg
           >
-          <p>Cra. 51 #96-27,Bogotá</p>
+          <p class="font-manrope">Cra. 51 # 96-27,Bogotá</p>
         </div>
         <div class="flex justify-center">
           <svg
@@ -71,7 +73,7 @@ import logo from "../../assets/Images/logo-512x512.png";
               d="M6.62 10.79c1.44 2.83 3.76 5.15 6.59 6.59l2.2-2.2c.28-.28.67-.36 1.02-.25c1.12.37 2.32.57 3.57.57a1 1 0 0 1 1 1V20a1 1 0 0 1-1 1A17 17 0 0 1 3 4a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.25.2 2.45.57 3.57c.11.35.03.74-.25 1.02z"
             ></path></svg
           >
-          <p>4003002000</p>
+          <p class="font-manrope">4003002000</p>
         </div>
         <div class="flex justify-center">
           <svg
@@ -85,7 +87,7 @@ import logo from "../../assets/Images/logo-512x512.png";
               d="m20 8l-8 5l-8-5V6l8 5l8-5m0-2H4c-1.11 0-2 .89-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2"
             ></path></svg
           >
-          <p>dianaguerrero@email.com</p>
+          <p class="font-manrope">dianaguerrero@email.com</p>
         </div>
         <span class="flex mt-5">
           <span class="h-px flex-1 bg-slate-200 md:hidden"></span>
@@ -138,7 +140,7 @@ import logo from "../../assets/Images/logo-512x512.png";
       <span class="h-px flex-1 bg-slate-200"></span>
     </span>
     <div class="my-1 flex justify-between items-center">
-      <p class="text-[12px] text-slate-400">
+      <p class="font-manrope text-[12px] text-slate-400">
         Color Kids @2015 <span>Todos los derechos reservados</span>
       </p>
       <a href="#" class="text-[12px] text-slate-400">Terminos y condiciones</a>
