--- a/src/components/section/BlogPostsSection.astro
+++ b/src/components/section/BlogPostsSection.astro
@@ -1,6 +1,9 @@
 ---
 import { getCollection } from "astro:content";
-import TypedPostCard from "../cards/TypedPostCard.astro";
+
+import ContactBanner from "../ui/ContactBanner.astro";
+import MinimalTypedPostCard from "../ui/cards/MinimalTypedPostCard.astro";
+import ImgHoverTypedPostCard from "../ui/cards/ImgHoverTypedPostCard.astro";
 
 const { count = 3 } = Astro.props;
 
@@ -16,15 +19,20 @@ const recentPosts = blogPosts
 
 <section class="mx-auto py-20">
   <div class="container max-w-10/12 mx-auto px-4">
-    <div>
-      <h1 class="mb-12 text-4xl text-slate-900 text-[min(10vw,60px)] font-bold">
+    <>
+      <h1
+        class="mb-12 tracking-tight text-4xl text-slate-900 text-[min(10vw,60px)] font-bold"
+      >
         Nuestros posts mas recientes
       </h1>
 
       <!-- Blog-posts-grid -->
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-        {recentPosts.map((post) => <TypedPostCard post={post} />)}
+        {recentPosts.map((post) => <ImgHoverTypedPostCard post={post} />)}
       </div>
-    </div>
+      <div class="mt-10">
+        <ContactBanner />
+      </div>
+    </>
   </div>
 </section>
