Refactor HeroCardTypedPost layout by removing unnecessary padding for improved responsiveness

--- a/src/components/ui/cards/HeroCardTypedPost.astro
+++ b/src/components/ui/cards/HeroCardTypedPost.astro
@@ -17,7 +17,7 @@ const author = await getEntry("author", data.author.id);
 ---
 
 <!-- Card Blog -->
-<div class="max-w-10/12 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
+<div class="max-w-10/12 py-10 lg:py-14 mx-auto">
   <!-- Grid -->
   <div class="grid sm:grid-cols-2 sm:items-center gap-8">
     <div class="sm:order-2">
