--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,13 @@
 import Contact from "../components/section/contact.astro";
 import BlogPostsSection from "@/components/section/BlogPostsSection.astro";
 import HeroSection from "@/components/section/HeroSection.astro";
+import ServicesSection from "@/components/section/ServicesSection.astro";
 import MainLayout from "@/layouts/MainLayout.astro";
 ---
 
 <MainLayout title="Color Kids">
   <HeroSection />
+  <ServicesSection />
   <BlogPostsSection />
   <!-- <Contact /> -->
 </MainLayout>
