Add GSAP for animations, update package dependencies, and implement ServicesSection component with detailed service descriptions

--- a/src/components/section/ServicesSection.astro
+++ b/src/components/section/ServicesSection.astro
@@ -2,6 +2,121 @@
 
 ---
 
-<section>
-  <h1>Services Section</h1>
+<section class="mx-auto py-20">
+  <div class="container max-w-10/12 mx-auto">
+    <h1
+      class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start"
+    >
+      Nuestros servicios
+    </h1>
+    <div class="services space-y-10">
+      <!-- First-service -->
+      <div class="flex flex-col items-start animated-service-1">
+        <h1
+          class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-tr from-blue-400 to-fuchsiaDark text-[min(10vw,72px)]"
+        >
+          01
+        </h1>
+        <h1 class="capitalize">Terapia ocupacional pediatrica</h1>
+        <span class="flex border-2 border-slate-300"></span>
+        <p class="prose font-manrope">
+          Ayudamos a niños con dificultades cognitivas o no, a desarrollar
+          habilidades para actividades diarias como jugar, aprender o cuidarse,
+          usando juegos y estrategias personalizadas para mejorar su
+          independencia y bienestar.
+        </p>
+        <a href="/servicios">
+          <p
+            class="mt-4 inline-flex items-center gap-x-1 text-sm text-slate-800 decoration-2 hover:underline focus:underline font-medium"
+          >
+            Leer más
+            <svg
+              class="shrink-0 size-4"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"><path d="m9 18 6-6-6-6"></path></svg
+            >
+          </p>
+        </a>
+      </div>
+      <!-- Second-service -->
+      <div class="flex flex-col items-end animated-service-2">
+        <h1
+          class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-tr from-blue-400 to-fuchsiaDark text-[min(10vw,72px)]"
+        >
+          02
+        </h1>
+        <h1 class="capitalize">Fonoaudiología</h1>
+        <span class="flex justify-center items-center border-2 border-slate-300"
+        ></span>
+        <p class="prose font-manrope">
+          servicio profesional especializado en la prevención, evaluación,
+          diagnóstico, tratamiento y rehabilitación de trastornos relacionados
+          con la comunicación humana. Este incluye áreas como el habla, la voz,
+          el lenguaje, la audición y las funciones orales (como la deglución y
+          la masticación).
+        </p>
+        <a href="/servicios">
+          <p
+            class="mt-4 inline-flex items-center gap-x-1 text-sm text-slate-800 decoration-2 hover:underline focus:underline font-medium"
+          >
+            Leer más
+            <svg
+              class="shrink-0 size-4"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"><path d="m9 18 6-6-6-6"></path></svg
+            >
+          </p>
+        </a>
+      </div>
+      <!-- third-service -->
+      <div class="flex flex-col items-start animated-service-2">
+        <h1
+          class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-tr from-blue-400 to-fuchsiaDark text-[min(10vw,72px)]"
+        >
+          03
+        </h1>
+        <h1 class="capitalize">Terapia alimentaria</h1>
+        <span class="flex justify-center items-center border-2 border-slate-300"
+        ></span>
+        <p class="prose font-manrope">
+          servicio especializado diseñado para apoyar a niños que enfrentan
+          dificultades relacionadas con la alimentación, ya sea por problemas
+          médicos, sensoriales, de desarrollo o de comportamiento.
+        </p>
+        <a href="/servicios">
+          <p
+            class="mt-4 inline-flex items-center gap-x-1 text-sm text-slate-800 decoration-2 hover:underline focus:underline font-medium"
+          >
+            Leer más
+            <svg
+              class="shrink-0 size-4"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"><path d="m9 18 6-6-6-6"></path></svg
+            >
+          </p>
+        </a>
+      </div>
+    </div>
+  </div>
 </section>
