--- a/src/components/section/ServicesSection.astro
+++ b/src/components/section/ServicesSection.astro
@@ -3,9 +3,9 @@
 ---
 
 <section class="mx-auto py-20">
-  <div class="container max-w-10/12 mx-auto">
+  <div class="container max-w-10/12 mx-auto wrapper">
     <h1
-      class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start"
+      class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
     >
       Nuestros servicios
     </h1>
@@ -18,7 +18,7 @@
           01
         </h1>
         <h1 class="capitalize">Terapia ocupacional pediatrica</h1>
-        <span class="flex border-2 border-slate-300"></span>
+
         <p class="prose font-manrope">
           Ayudamos a niños con dificultades cognitivas o no, a desarrollar
           habilidades para actividades diarias como jugar, aprender o cuidarse,
@@ -53,8 +53,7 @@
           02
         </h1>
         <h1 class="capitalize">Fonoaudiología</h1>
-        <span class="flex justify-center items-center border-2 border-slate-300"
-        ></span>
+
         <p class="prose font-manrope">
           servicio profesional especializado en la prevención, evaluación,
           diagnóstico, tratamiento y rehabilitación de trastornos relacionados
@@ -83,15 +82,14 @@
         </a>
       </div>
       <!-- third-service -->
-      <div class="flex flex-col items-start animated-service-2">
+      <div class="flex flex-col items-start animated-service-3">
         <h1
           class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-tr from-blue-400 to-fuchsiaDark text-[min(10vw,72px)]"
         >
           03
         </h1>
         <h1 class="capitalize">Terapia alimentaria</h1>
-        <span class="flex justify-center items-center border-2 border-slate-300"
-        ></span>
+
         <p class="prose font-manrope">
           servicio especializado diseñado para apoyar a niños que enfrentan
           dificultades relacionadas con la alimentación, ya sea por problemas
@@ -120,3 +118,50 @@
     </div>
   </div>
 </section>
+
+<script>
+  import gsap from "gsap";
+  import { ScrollTrigger } from "gsap/ScrollTrigger";
+
+  gsap.registerPlugin(ScrollTrigger);
+
+  document.addEventListener("astro:page-load", () => {
+    var tl = gsap.timeline({
+      scrollTrigger: {
+        trigger: ".wrapper",
+        start: "top 80%",
+        toggleActions: "play none none reverse",
+
+        markers: true,
+      },
+    });
+
+    tl.from(".title", {
+      opacity: 0,
+      y: 80,
+      duration: 1,
+      ease: "power2.out",
+    });
+
+    tl.from(".animated-service-1", {
+      opacity: 0,
+      x: -80,
+      duration: 1.5,
+      ease: "power2.out",
+    });
+
+    tl.from(".animated-service-2", {
+      opacity: 0,
+      x: 80,
+      duration: 1.5,
+      ease: "power2.out",
+    });
+
+    tl.from(".animated-service-3", {
+      opacity: 0,
+      x: -80,
+      duration: 1.5,
+      ease: "power2.out",
+    });
+  });
+</script>
