--- a/src/components/section/HeroSection.astro
+++ b/src/components/section/HeroSection.astro
@@ -64,7 +64,7 @@ import heroImg from "../../assets/Images/hero-img.jpg";
           >
             <Image
               src={heroImg}
-              alt="Website screenshot"
+              alt="pencils-image"
               class="w-full h-full object-cover rounded-lg"
             />
           </div>
