--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,5 +10,5 @@ import MainLayout from "@/layouts/MainLayout.astro";
   <HeroSection />
   <ServicesSection />
   <BlogPostsSection />
-  <!-- <Contact /> -->
+  <Contact />
 </MainLayout>
