--- a/src/components/section/ServicesSection.astro
+++ b/src/components/section/ServicesSection.astro
@@ -2,8 +2,8 @@
 
 ---
 
-<section class="mx-auto py-20">
-  <div class="container max-w-10/12 mx-auto wrapper">
+<section class="mx-auto pt-20">
+  <div class="container max-w-10/12 mx-auto">
     <h1
       class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
     >
@@ -119,49 +119,62 @@
   </div>
 </section>
 
-<script>
-  import gsap from "gsap";
-  import { ScrollTrigger } from "gsap/ScrollTrigger";
+<style>
+  .title {
+    animation: reveal-title 3s linear both;
+    animation-timeline: view(block);
+    animation-range: cover 0% cover 30%;
+  }
+  .animated-service-1 {
+    animation: reveal-1 3s ease-in-out both;
+    animation-timeline: view(block);
+    animation-range: entry 0% cover 30%;
+  }
+  .animated-service-2 {
+    animation: reveal-2 3s ease-in-out both;
+    animation-timeline: view(block);
+    animation-range: cover 0% cover 40%;
+  }
+  .animated-service-3 {
+    animation: reveal-3 3s ease-in-out both;
+    animation-timeline: view(block);
+    animation-range: cover 0% cover 30%;
+  }
 
-  gsap.registerPlugin(ScrollTrigger);
-
-  document.addEventListener("astro:page-load", () => {
-    var tl = gsap.timeline({
-      scrollTrigger: {
-        trigger: ".wrapper",
-        start: "top 80%",
-        toggleActions: "play none none reverse",
-
-        markers: true,
-      },
-    });
-
-    tl.from(".title", {
-      opacity: 0,
-      y: 80,
-      duration: 1,
-      ease: "power2.out",
-    });
-
-    tl.from(".animated-service-1", {
-      opacity: 0,
-      x: -80,
-      duration: 1.5,
-      ease: "power2.out",
-    });
-
-    tl.from(".animated-service-2", {
-      opacity: 0,
-      x: 80,
-      duration: 1.5,
-      ease: "power2.out",
-    });
-
-    tl.from(".animated-service-3", {
-      opacity: 0,
-      x: -80,
-      duration: 1.5,
-      ease: "power2.out",
-    });
-  });
-</script>
+  @keyframes reveal-title {
+    0% {
+      opacity: 0;
+      transform: translateY(80px);
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes reveal-1 {
+    0% {
+      opacity: 0;
+      transform: translateX(-200px);
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes reveal-2 {
+    0% {
+      opacity: 0;
+      transform: translateX(200px);
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes reveal-3 {
+    0% {
+      opacity: 0;
+      transform: translateX(-200px);
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+</style>
