--- a/src/components/section/contact.astro
+++ b/src/components/section/contact.astro
@@ -1,30 +1,78 @@
 ---
-import ContactForm from "../form/contactForm.astro";
+import ContactForm from "../ui/form/contactForm.astro";
 ---
 
-<section>
-  <div class="flex flex-col items-center justify-center space-y-2 col-span-2">
-    <div>
-      <p>
-        <iframe
-          class="w-3xs h-3xs md:w-xl md:h-96"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.4824734110725!2d-74.06464452545609!3d4.685893495289075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9bb05327ff93%3A0xe15b4bd624b06708!2sColor%20Kids%20-%20Centro%20de%20Estimulaci%C3%B3n%20Infantil!5e0!3m2!1ses-419!2sco!4v1740414056473!5m2!1ses-419!2sco"
-          allowfullscreen="true"
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </p>
-    </div>
-  </div>
+<section class="mx-auto pb-20">
+  <div class="container max-w-10/12 mx-auto">
+    <h1
+      class="mb-10 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
+    >
+      Contacto
+    </h1>
+    <div class="grid md:grid-cols-2 gap-6">
+      <div class="flex flex-col max-w-2xl p-6 subTitle">
+        <h1
+          class="text-4xl text-[min(10vw,60px)] font-bold text-slate-300 leading-tight"
+        >
+          Listo para comenzar? <span
+            class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-fuchsiaDark"
+            >Contactanos!</span
+          >
+        </h1>
+      </div>
 
-  <!-- Contact-form -->
-  <div class="ml-4 mb-3">
-    <ContactForm />
+      <div class="form">
+        <ContactForm />
+      </div>
+    </div>
   </div>
 </section>
 
 <style>
-  iframe {
-    border-radius: 16px;
-    border: 2px solid slategray;
+  .title {
+    animation: reveal-title 3s linear both;
+    animation-timeline: view(block);
+    animation-range: cover 0% cover 30%;
+  }
+
+  .subTitle {
+    animation: reveal-subTitle 3s linear both;
+    animation-timeline: view(block);
+    animation-range: cover 0% cover 30%;
+  }
+
+  .form {
+  }
+
+  @keyframes reveal-title {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(80px);
+    }
+  }
+  @keyframes reveal-subTitle {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 0.6;
+      transform: translateY(-40px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(-20px);
+    }
+  }
+  @keyframes reveal-form {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(80px);
+    }
   }
 </style>
