--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -12,7 +12,7 @@ import logo from "../../assets/Images/logo-512x512.png";
       <!-- Logo -->
       <div>
         <a href="/">
-          <Image src={logo} alt="Logo" class="w-32 h-32" />
+          <Image src={logo} alt="Logo" class="w-32 h-32 image" />
         </a>
       </div>
       <!-- Mobile menu button -->
@@ -95,10 +95,22 @@ import logo from "../../assets/Images/logo-512x512.png";
     overflow: hidden;
     transition: max-height 0.5s ease-out;
   }
-
   .mobile-menu.open {
     max-height: 1000px;
     transition: max-height 0.8s ease-in;
+  }
+
+  .image {
+    animation: enhance-navbar linear both;
+    animation-timeline: scroll(root block);
+    animation-range: 0 200px;
+  }
+
+  @keyframes enhance-navbar {
+    to {
+      width: 78px;
+      height: 78px;
+    }
   }
 </style>
 
