--- a/src/components/ui/cards/HorizontalTypedPostCard.astro
+++ b/src/components/ui/cards/HorizontalTypedPostCard.astro
@@ -20,7 +20,7 @@ const author = await getEntry("author", data.author.id);
   <!-- Card -->
   <a
     class="group block rounded-xl overflow-hidden focus:outline-none p-4 bg-colorKidWhite duration-500 ease-in-out"
-    href={`/posts/${id}`}
+    href={`/blog/${id}`}
   >
     <div class="flex flex-col sm:flex-row sm:items-center gap-3 sm:gap-5">
       <div
