--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,6 +9,9 @@
 }
 
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
 @plugin '@tailwindcss/typography';
 
 @layer base {
@@ -45,9 +48,9 @@
   }
 
   .btn-tertiary {
-    @apply bg-gradient-to-r from-fuchsiaDark to-fuchsiaMain
-      hover:from-fuchsiaMain
-      hover:to-fuchsiaDark focus:outline-1
+    @apply bg-gradient-to-r from-orangeDark to-orangeMain
+      hover:from-orangeMain
+      hover:to-orangeDark focus:outline-1
         px-4 py-2 rounded-xl
       text-slate-100 font-semibold text-lg
         shadow-md transition duration-400 ease-in-out
