--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -10,7 +10,7 @@ import MainLayout from "@/layouts/MainLayout.astro";
           <div class="col-sm-10 col-sm-offset-1 text-center">
             <div class="four_zero_four_bg">
               <h1
-                class="text-center text-9xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-orangeMain to-fuchsiaDark"
+                class="text-center text-9xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-orangeDark to-orangeMain"
               >
                 404
               </h1>
@@ -23,12 +23,8 @@ import MainLayout from "@/layouts/MainLayout.astro";
                 La pagina que buscas no esta disponible!
               </p>
 
-              <button
-                class="btn-tertiary"
-                type="button"
-                onclick="history.back()"
-              >
-                <a href="" class="link_404">Regresar</a>
+              <button class="btn-tertiary" type="button">
+                <a href="/" class="link_404">Regresar</a>
               </button>
             </div>
           </div>
