contact page have been added, to do integrate resend to get the form data

--- a/src/components/ui/ContactBanner.astro
+++ b/src/components/ui/ContactBanner.astro
@@ -8,18 +8,18 @@
   <div class="mx-auto flex flex-col md:flex-row items-center justify-between">
     <div class="text-center md:text-left mb-6 md:mb-0">
       <h2
-        class="text-2xl md:text-3xl font-extrabold text-slate-100 tracking-tight"
+        class="text-2xl md:text-3xl font-extrabold text-slate-50 tracking-tight"
       >
         Listo para comenzar? Contactanos!
       </h2>
-      <p class="mt-2 text-lg text-slate-800 max-w-3xl">
-        Nuestro equipo esta aqui para resolver cualquier duda.
+      <p class="mt-2 font-manrope text-lg text-slate-800 max-w-3xl">
+        Nuestro equipo esta disponible para resolver cualquier duda.
       </p>
     </div>
-    <div class="flex-shrink-0">
+    <!-- <div class="flex-shrink-0">
       <a href="/contacto">
         <button class="btn-primary">Contactanos</button>
       </a>
-    </div>
+    </div> -->
   </div>
 </div>
