--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -6,9 +6,9 @@ import logo from "../../assets/Images/logo-512x512.png";
 
 <section class="w-full border border-t-2 border-slate-100">
   <footer class="w-full mx-auto md:w-10/12">
-    <div class="block space-y-5 p-5 md:flex md:justify-between md:p-5">
+    <div class="block space-y-5 p-5 lg:flex lg:justify-between lg:p-5">
       <!-- Logo-mision -->
-      <div class="flex flex-col items-center px-4 md:px-0 md:block">
+      <div class="flex flex-col items-center px-4 lg:px-0 lg:block">
         <a href="/">
           <Image src={logo} alt="logo" class="w-36 h-36" />
         </a>
@@ -17,15 +17,15 @@ import logo from "../../assets/Images/logo-512x512.png";
         </p>
         <!-- Divider -->
         <span class="flex">
-          <span class="h-px flex-1 bg-slate-200 md:hidden"></span>
+          <span class="h-px flex-1 bg-slate-200 lg:hidden"></span>
         </span>
       </div>
 
       <!-- Main-menu -->
       <div class="text-center">
         <!-- Divider -->
-        <span class="flex mb-5 md:mb-0">
-          <span class="h-px flex-1 bg-slate-200 md:hidden"></span>
+        <span class="flex mb-5 lg:mb-0">
+          <span class="h-px flex-1 bg-slate-200 lg:hidden"></span>
         </span>
         <h1 class="mb-3">Menu</h1>
 
@@ -40,7 +40,7 @@ import logo from "../../assets/Images/logo-512x512.png";
         </div>
         <!-- Divider -->
         <span class="flex mt-5">
-          <span class="h-px flex-1 bg-slate-200 md:hidden"></span>
+          <span class="h-px flex-1 bg-slate-200 lg:hidden"></span>
         </span>
       </div>
 
@@ -90,7 +90,7 @@ import logo from "../../assets/Images/logo-512x512.png";
           <p class="font-manrope">dianaguerrero@email.com</p>
         </div>
         <span class="flex mt-5">
-          <span class="h-px flex-1 bg-slate-200 md:hidden"></span>
+          <span class="h-px flex-1 bg-slate-200 lg:hidden"></span>
         </span>
       </div>
       <!-- Social -->
