--- a/src/components/ui/form/contactForm.astro
+++ b/src/components/ui/form/contactForm.astro
@@ -54,6 +54,8 @@
 
     <div class="relative">
       <textarea
+        cols="30"
+        rows="5"
         placeholder="Inquietudes"
         id="inquietudes"
         name="inquietudes"
@@ -77,5 +79,3 @@
     <button type="button" class="btn-primary">Enviar</button>
   </form>
 </div>
-
-<style></style>
