--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Contact from "../components/section/contact.astro";
+import ContactForm from "@/components/ui/form/contactForm.astro";
 import BlogPostsSection from "@/components/section/BlogPostsSection.astro";
 import HeroSection from "@/components/section/HeroSection.astro";
 import ServicesSection from "@/components/section/ServicesSection.astro";
@@ -10,5 +10,5 @@ import MainLayout from "@/layouts/MainLayout.astro";
   <HeroSection />
   <ServicesSection />
   <BlogPostsSection />
-  <Contact />
+  <ContactForm />
 </MainLayout>
