--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -35,7 +35,28 @@ const { title } = Astro.props;
 
   <body>
     <main>
-      <slot />
+      <div class="relative">
+        <div class="absolute inset-0 z-0">
+          <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
+            <defs>
+              <pattern
+                id="circles"
+                x="0"
+                y="0"
+                width="40"
+                height="40"
+                patternUnits="userSpaceOnUse"
+              >
+                <circle cx="20" cy="20" r="3" fill="#f1f5f9"></circle>
+              </pattern>
+            </defs>
+            <rect width="100%" height="100%" fill="url(#circles)"></rect>
+          </svg>
+        </div>
+        <div class="relative z-10">
+          <slot />
+        </div>
+      </div>
     </main>
     <Footer />
     <style>
