--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -7,6 +7,8 @@ import { Image } from "astro:assets";
 import { getEntry } from "astro:content";
 import { getCollection, render } from "astro:content";
 
+export const prerender = true;
+
 export const getStaticPaths = async () => {
   const posts = await getCollection("blog");
 
