--- a/src/components/section/contact.astro
+++ b/src/components/section/contact.astro
@@ -9,7 +9,7 @@ import ContactForm from "../ui/form/contactForm.astro";
     >
       Contacto
     </h1>
-    <div class="grid md:grid-cols-2 gap-6">
+    <div class="grid lg:grid-cols-2 gap-6">
       <div class="flex flex-col max-w-2xl p-6 subTitle">
         <h1
           class="text-4xl text-[min(10vw,60px)] font-bold text-slate-300 leading-tight"
@@ -50,7 +50,7 @@ import ContactForm from "../ui/form/contactForm.astro";
     }
     100% {
       opacity: 1;
-      transform: translateY(80px);
+      transform: translateY(-40px);
     }
   }
   @keyframes reveal-subTitle {
@@ -59,11 +59,11 @@ import ContactForm from "../ui/form/contactForm.astro";
     }
     50% {
       opacity: 0.6;
-      transform: translateY(-40px);
+      transform: translateY(-30px);
     }
     100% {
       opacity: 1;
-      transform: translateY(-20px);
+      transform: translateY(-10px);
     }
   }
   @keyframes reveal-form {
