--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,14 @@
 ---
-import ContactForm from "@/components/ui/form/contactForm.astro";
 import BlogPostsSection from "@/components/section/BlogPostsSection.astro";
 import HeroSection from "@/components/section/HeroSection.astro";
 import ServicesSection from "@/components/section/ServicesSection.astro";
 import MainLayout from "@/layouts/MainLayout.astro";
+import Contact from "@/components/section/contact.astro";
 ---
 
 <MainLayout title="Color Kids">
   <HeroSection />
   <ServicesSection />
   <BlogPostsSection />
-  <ContactForm />
+  <Contact />
 </MainLayout>
