Add about page feature

--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -3,5 +3,5 @@ import MainLayout from "../layouts/MainLayout.astro";
 ---
 
 <MainLayout title="Nosotros">
-  <h1>nosotros</h1>
+  <h1>nosotros en construccion</h1>
 </MainLayout>
